<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/textViewWelcomeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_home"
        android:textSize="28sp" />

</LinearLayout>


<ScrollView
android:layout_width="match_parent"
android:layout_height="0dp"
    android:layout_weight="1">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="16dp">

<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardMinhasDoacoes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minhas_doa_es"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acompanhe_aqui_o_hist_rico_de_todas_as_doa_es_que_voc_realizou_atrav_s_do_nosso_aplicativo_e_veja_o_impacto_da_sua_generosidade"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="16dp"
            tools:ignore="VisualLintLongText" />

        <Button
            android:id="@+id/buttonVerMinhasDoacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_minhas_doa_es"
            android:layout_gravity="end"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardEmpresasDoadoras"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empresas_doadoras"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descubra_e_conhe_a_as_empresas_parceiras_que_apoiam_nossa_causa_com_suas_valiosas_doa_es_e_contribuem_para_um_futuro_melhor"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="16dp"
            tools:ignore="VisualLintLongText" />

        <Button
            android:id="@+id/buttonVerEmpresas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_empresas"
            android:layout_gravity="end"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

</LinearLayout>
    </ScrollView>

    </LinearLayout>